Changed Dockerfile to include only JRE in image