@@ -1,11 +1,19 @@
-FROM eclipse-temurin:17-jdk-jammy
+FROM eclipse-temurin:17 as jre-build
+RUN $JAVA_HOME/bin/jlink \
+         --add-modules java.base \
+         --strip-debug \
+         --no-man-pages \
+         --no-header-files \
+         --compress=2 \
+         --output /javaruntime
 
-WORKDIR /app
+FROM debian:buster-slim
+ENV JAVA_HOME=/opt/java/openjdk
+ENV PATH "${JAVA_HOME}/bin:${PATH}"
+COPY --from=jre-build /javaruntime $JAVA_HOME
 
-COPY .mvn/ .mvn/
-COPY mvnw pom.xml ./
-RUN ./mvnw dependency:resolve
-
-COPY src ./src
-
-CMD ["./mvnw", "spring-boot:run"]
+RUN mkdir /opt/app
+WORKDIR /opt/app
+COPY ./target/*.jar ./
+RUN mv *.jar app.jar
+CMD ["java", "-jar", "app.jar"]
